<resources>
    <string name="app_name">Lalali</string>

    <string name="hello_world">Hello Marilene</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="addressDivider">Address</string>
    <string name="clientDivider">Client</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="required_field">Field is Required</string>
    <string name="save_confirm_message">Saved successfully</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_message">Succesfully deleted</string>
    <string name="confirm_progress">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="title_delete_confirm">Delete</string>
    <string name="no">No</string>
    <string name="cep">CEP</string>
    <string name="find">Find</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="loading">Loading...</string>
    <string name="phoneNumber">Phone</string>
    <string name="authentication_cofirm_success">Login Succesfully</string>
    <string name="authentication_cofirm_fail">Login fail</string>
    <string name="age">Age</string>
</resources>
