<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/clientDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:textSize="25sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="6dp"/>
    <EditText
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/clientAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/birthDate"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/addressDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:textSize="25sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="6dp"/>
    <EditText
        android:id="@+id/clientAddressStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street"/>
    <EditText
        android:id="@+id/clientAddressCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"/>
    <EditText
        android:id="@+id/clientAddressState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"/>
</LinearLayout>